--- a/roles/artifactorypro/tasks/init.yml
+++ b/roles/artifactorypro/tasks/init.yml
@@ -1,8 +1,14 @@
 ---
 - name: Logger
+  shell: "echo {{ date }}: Start init.yml >>{{ log_file }}"
+
+- name: Logger
   shell: "echo {{ date }}: Start service >>{{ log_file }}"
 
 - name: Start service
   service:
     name: artifactory
     state: started
+
+- name: Logger
+  shell: "echo {{ date }}: End init.yml >>{{ log_file }}"
